2006-11-09  Robert Schuster  <robertschuster@fsfe.org>

	* native/jni/java-nio/gnu_java_nio_VMChannel.c:
	(getpeername): Added 16 byte offset to memcpy operation.

2006-11-09  Robert Schuster  <robertschuster@fsfe.org>

	* native/jni/java-nio/gnu_java_nio_VMChannel.c:
	(getsockname): Added 16 byte offset to memcpy operation.

2006-11-08  Mark Wielaard  <mark@klomp.org>

	Fixes bug #29754
	* java/io/OutputStreamWriter.java
	(OutputStreamWriter(OutputStream,Charset)): Set encodingName.
	(OutputStreamWriter(OutputStream,CharsetEncoder)): Likewise.

2006-11-08  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/html/HTMLEditorKit.java
	(getParser): Use plain HTML_401F DTD.
	* javax/swing/text/html/HTMLDocument.java
	(HTMLReader.print): Removed method and all calls to it.
	(HTMLReader.printBuffer): Removed method and all calls to it.
	(HTMLReader.inImpliedParagraph): New field.
	(HTMLReader.inParagraph): New field.
	(HTMLReader.addContent): Create implied p-tag if necessary.
	(HTMLReader.addSpecialElement): Create implied p-tag if necessary.
	(HTMLReader.blockClose): Close implied p-tag if necessary.
	(HTMLReader.blockOpen): Close implied p-tag if necessary.
	* gnu/javax/swing/text/html/parser/HTML_401Swing.java: Removed.

2006-11-08  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/html/HTMLEditorKit.java
	(HTMLFactory.create): Removed mapping for TD tag. This
	is done in TableView.
	* javax/swing/text/html/TableView.java:
	Implemented from scratch.

2006-11-07  Roman Kennke  <kennke@aicas.com>

	* gnu/javax/swing/text/html/parser/support/Parser.java
	(_handleText): Check if text content is actually allowed before
	passing empty text fragments on to the parser callbacks.

2006-11-07  Mark Wielaard  <mark@klomp.org>

	* gnu/java/net/protocol/jar/Handler.java (parseURL): Flatten jar
	path.
	(flat): New method.

2006-11-07  Tania Bento  <tbento@redhat.com>

	* java/awt/FlowLayout.java
	(getSize): If parent does not have a component, then a 